sources/05_network/02_ingress/mynapp-ing-multi-hosts 2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mynapp-ing-mhost
spec:
  rules:
  - host: web1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mynapp-svc-ext-np1
          servicePort: 80
  - host: web2.example.com
    http:
     paths:
      - path: /
        backend:
          serviceName: mynapp-svc-ext-np2
          servicePort: 80
